--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
@@ -17,7 +17,7 @@
     </figure>
     <span>CardioLife</span>
   </header>
-
+  
   <div class="bar"></div>
 
   <main>
