add responsive css

--- a/contato.html
+++ b/contato.html
@@ -35,9 +35,9 @@
                 Para agendar algum dos serviços da CardioLife, entrem em contato através de
                 nossos números:
             </p>
-            <span>Telefone</span>
+            <h2>Telefone</h2>
             <p>(xx) xxxx-xxxx</p>
-            <span>WhatsApp</span>
+            <h2>WhatsApp</h2>
             <p>(xx) xxxxx-xxxx</p>
             <h2>Endereço</h2>
             <p>Av. Gov. Agamenon Magalhães - Santo Amaro</p>
@@ -58,7 +58,7 @@
                 </div>
             </form>
             <form class="botao">
-                <label id="botao1" for=""></label><input type="reset" value="Limpar"><br>
+                <label id="botaolimpar" for=""></label><input type="reset" value="Limpar"><br>
                 <label for=""></label><input type="submit" value="Enviar">
             </form>
         </div>
