--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
 
-    <div class="main">
+    <div class="content">
       <p>
         Bem-vindo à CardioLife! Aqui, cuidamos do seu coração
         com paixão e expertise. <br /><br />Na nossa página inicial, você
